# Artificial-Intelligence-MSc-Degree

./: README.md
ComputerVision_and_ML_for_Art_Works/: README.md
DL for Art Works/: Pipeline.ipynb
MADDPG/: MADDPG_agent.py  README.md  Tennis.ipynb  model.py
PandaRobot/: README.md
PandaRobot/catkin_ws/src/franka_panda_description/: README.md  package.xml
PandaRobot/catkin_ws/src/franka_ros_interface/: README.md
PandaRobot/catkin_ws/src/franka_ros_interface/franka_interface/: package.xml
PandaRobot/catkin_ws/src/franka_ros_interface/franka_moveit/: package.xml
PandaRobot/catkin_ws/src/franka_ros_interface/franka_ros_interface/: package.xml
PandaRobot/catkin_ws/src/franka_ros_interface/franka_tools/: package.xml
PandaRobot/catkin_ws/src/panda_robot/: README.md
PandaRobot/catkin_ws/src/pybullet_robot/: README.md
PandaRobot/catkin_ws/src/pybullet_robot/src/: Optimize.py  Study_Analyzer.py  benchmark.py  joint_space_control.py  (+12 more)
SmartGreenCare/: README.md
SmartGreenCare/Bridge/: AI.py  DataNDVI  ble_scanner.py  crc.py  globals_var.py  routine.py  sharing.py
SmartGreenCare/Server/: config.py  readme.txt  run.py
SmartGreenCare/Server/web/: db.py  plants_info.sqlite  routes.py  scheduler.py  twilio.py
SmartGreenCare/Server/web/templates/: item.html  layout.html  main.html
SmartGreenCare/Server/web/utils/: utils.py
SmartGreenCare/uC/: crc8.h  uC.ino
pybullet_robot/src/app/: app.py
pybullet_robot/src/pybullet_robot/controllers/: os_controller.py  os_impedance_ctrl.py  os_impedance_ctrl_joint_space.py  planning.py  traj_config_joints.py
(+42 files in other folders)
