<?xml version="1.0"?>
<package>
  <name>franka_moveit</name>
  <version>0.7.1</version>
  <description>
    franka_moveit package wrapping franka_moveit_config using franka_ros_interface.
  </description>

   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>panda_moveit_config</build_depend>
  <run_depend>panda_moveit_config</run_depend>

</package>
